--- a/project0/index.html
+++ b/project0/index.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
     <title>My Webpage</title>
 </head>
 <body>
-    Hello, World!
+    <!-- Hello, World! -->
+    <div class="jumbotron">
+  <h1 class="display-4">Hello, world!</h1>
+  <p class="lead">Let's get this project started...</p>
+  <hr class="my-4">
+  <p>Click the button below to gain access to more info.</p>
+  <p class="lead">
+    <a class="btn btn-primary btn-lg" href="text.html" role="button" target="_blank">Learn more</a>
+  </p>
+</div>
 </body>
 </html>
