Playing with more bootstrap

--- a/project0/index.html
+++ b/project0/index.html
@@ -11,10 +11,10 @@
 <body>
     <!-- Hello, World! -->
     <div class="jumbotron">
-  <h1 class="display-4">Hello, world!</h1>
+  <h1 class="display-4">Project 0</h1>
   <p class="lead">Let's get this project started...</p>
   <hr class="my-4">
-  <p>Click the button below to gain access to more info.</p>
+  <p>Click the button below to learn more about my coding journey.</p>
   <p class="lead">
     <a class="btn btn-primary btn-lg" href="text.html" role="button" target="_blank">Learn more</a>
   </p>
